Refactor(auth): Map -> DTO로 변경